--- a/gogo.html
+++ b/gogo.html
@@ -70,21 +70,49 @@
                                 брэндийн кофе болон дагалдах хэрэгслүүдийг Монголд тун удахгүй худалдаалах гэж байна.
                             </p>
                         </div>
-                        <div style="display: flex;width: 34.353px;height: 24px; flex-direction: row;justify-content: space-between;">
+                        <div
+                            style="display: flex;width: 34.353px;height: 24px; flex-direction: row;justify-content: space-between;">
                             <img class="share-icon" src="img/share-icon.png">
-                            <p style="padding: 0px;margin: 0px;">7</p>
+                            <p style="padding: 0px;margin: 0px;opacity: 0.5;font-weight: 600;font-size: large  ;">7</p>
                         </div>
                     </div>
-                    <img class="img-top-hl" src="img/coffee-img.jpg">
+                    <div id="img-top-div"><img class="img-top-hl" src="img/coffee-img.jpg">
+                        <div class="black-box">
+                            <div style="display: flex;align-items: center;justify-content: center;">Унши∏х</div>
+                        </div>
+                    </div>
                 </div>
                 <div id="highlight-bottom">
-                    <div id="bot-box1"> </div>
-                    <div id="bot-box2"> </div>
-                    <div id="bot-box3"> </div>
-                    <div id="bot-box4"> </div>
+                    <div id="bot-box1">
+                        <div id="box1-div">
+                            <img class="box1-img" src="img/bot box 1.jpg">
+                            <p class="box1-text">Minister tower: Төрийн соёрхолт Саранцацралт “Vip” үзэсгэлэн</p>
+                            <div class="share-icon-container"><img class="box-share-icon" src="img/share-icon.png">2
+                            </div>
+                        </div>
+                    </div>
+                    <div id="bot-box2">
+                        <div id="box2-div">
+                            <img class="box1-img" src="img/bot box 2.jpg">
+                            <p class="box1-text">Minister tower: Төрийн соёрхолт Саранцацралт “Vip” үзэсгэлэн</p>
+                            <div class="share-icon-container"> <img class="box-share-icon" src="img/share-icon.png">2
+                            </div>
+                        </div>
+                    </div>
+                    <div id="bot-box3">
+                        <div id="box3-div">
+                            <img class="box1-img" src="img/bot box 3.jpg">
+                            <p class="box1-text">Minister tower: Төрийн соёрхолт Саранцацралт “Vip” үзэсгэлэн</p>
+                            <div class="share-icon-container"><img class="box-share-icon" src="img/share-icon.png">2
+                            </div>
+                        </div>
+                    </div>
+                    <div id="bot-box4">
+                        <div id="box4-div">
+                            <img class="box4-img" src="img/bot box 4.jpg">
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
     </header>
 
     <main> </main>
