--- a/gogo.html
+++ b/gogo.html
@@ -56,6 +56,10 @@
             </div>
 
         </div>
+       
+    </header>
+
+    <main id="main">
         <div id="div-highlight">
             <div id="highlight-container">
                 <div id="top-highlight">
@@ -76,9 +80,10 @@
                             <p style="padding: 0px;margin: 0px;opacity: 0.5;font-weight: 600;font-size: large  ;">7</p>
                         </div>
                     </div>
-                    <div id="img-top-div"><img class="img-top-hl" src="img/coffee-img.jpg">
+                    <div id="img-top-div">
+                        <img class="img-top-hl" src="img/coffee-img.jpg">
                         <div class="black-box">
-                            <div style="display: flex;align-items: center;justify-content: center;">Унши∏х</div>
+                            <div style="display: flex;align-items: center;justify-content: center;">Унших</div>
                         </div>
                     </div>
                 </div>
@@ -113,9 +118,48 @@
                         </div>
                     </div>
                 </div>
-    </header>
-
-    <main> </main>
+            </div>
+        </div>
+        <div id="story-div">
+            <div id="story-container">
+                <div class="story-title">
+                    <div class="story-title1">GoGo</div>
+                    <div class="story-title2">СТОРИ</div>
+                </div>
+                <div id="story-list-container">
+                    <ul id="story-list">
+                        <li class="story-item">
+                            <img class="story-img" src="img/story.png">
+                        </li>
+                        <li class="story-item">
+                            <img class="story-img" src="img/story.png">
+                        </li>
+                        <li class="story-item">
+                            <img class="story-img" src="img/story.png">
+                        </li>
+                        <li class="story-item">
+                            <img class="story-img" src="img/story.png">
+                        </li>
+                        <li class="story-item">
+                            <img class="story-img" src="img/story.png">
+                        </li>
+                        <li class="story-item">
+                            <img class="story-img" src="img/story.png">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div id="news-container">
+            <div id="title-left">
+                <div id="title-news">
+                    <p class="text-news">Өнөөдөр</p>
+                    <img class="leaf-img" src="img/leaf.png">
+                </div>
+            </div>
+            
+        </div>
+     </main>
 
     <footer> </footer>
 </body>
