--- a/gogo.html
+++ b/gogo.html
@@ -56,7 +56,7 @@
             </div>
 
         </div>
-       
+
     </header>
 
     <main id="main">
@@ -151,17 +151,138 @@
             </div>
         </div>
         <div id="news-container">
-            <div id="title-left">
-                <div id="title-news">
-                    <p class="text-news">Өнөөдөр</p>
-                    <img class="leaf-img" src="img/leaf.png">
+            <div id="left-news-container">
+                <div id="title-left">
+                    <button id="news-button-1">
+                        <div
+                            style="width: 103.812px;height: 26.87px;display: flex;flex-direction: row;justify-content: space-between;">
+                            <p class="text-news">Өнөөдөр</p>
+                            <img class="leaf-img" src="img/leaf.png">
+                        </div>
+                        <div id="news-button-line"></div>
+                        <p class="news-button-text">11 сарын 17</p>
+                    </button>
+                    <button class="news-buttons">
+                        <div id="news-button-line"></div>
+                        <p class="news-button-text">11 сарын 18</p>
+                    </button>
+                    <button class="news-buttons">
+                        <div id="news-button-line"></div>
+                        <p class="news-button-text">11 сарын 19</p>
+                    </button>
+                    <button class="news-buttons">
+                        <div id="news-button-line"></div>
+                        <p class="news-button-text">11 сарын 20</p>
+                    </button>
+                    <button class="news-buttons">
+                        <div id="news-button-line"></div>
+                        <p class="news-button-text">11 сарын 21</p>
+                    </button>
+                    <button class="news-buttons">
+                        <div id="news-button-line"></div>
+                        <p class="news-button-text">11 сарын 22</p>
+                    </button>
+                </div>
+                <div class="news-boxes">
+                    <img class="news-box-img" src="img/Anime-Glasses-Flash-meme-1.jpg" alt="">
+                    <div class="news-box-text">
+                        Арванхоёрдугаар сард багтаан Туулын хурдны замын тендерийг зарлана
+                    </div>
+                    <div class="news-box-text-2">
+                        УИХ-аар энэ 7 хоногт хэлэлцэх асуудлуудын жагсаалтыг хүргэж байна.
+                      </div>
+                </div>
+                <div class="news-boxes">
+                    <img class="news-box-img" src="img/Anime-Glasses-Flash-meme-1.jpg" alt="">
+                    <div class="news-box-text">gergegergerge</div>
+                </div>
+                <div class="news-boxes">
+                    <img class="news-box-img" src="img/Anime-Glasses-Flash-meme-1.jpg" alt="">
+                    <div class="news-box-text">gergegergerge</div>
+                </div>
+                <div class="news-boxes">
+                    <img class="news-box-img" src="img/Anime-Glasses-Flash-meme-1.jpg" alt="">
+                    <div class="news-box-text">gergegergerge</div>
+                </div>
+                <div class="news-boxes">
+                    <img class="news-box-img" src="img/Anime-Glasses-Flash-meme-1.jpg" alt="">
+                    <div class="news-box-text">gergegergerge</div>
+                </div>
+                <div class="news-boxes">
+                    <img class="news-box-img" src="img/Anime-Glasses-Flash-meme-1.jpg" alt="">
+                    <div class="news-box-text">gergegergerge</div>
+                </div>
+                <div class="news-boxes">
+                    <img class="news-box-img" src="img/Anime-Glasses-Flash-meme-1.jpg" alt="">
+                    <div class="news-box-text">gergegergerge</div>
+                </div>
+                <div class="news-boxes">
+                    <img class="news-box-img" src="img/Anime-Glasses-Flash-meme-1.jpg" alt="">
+                    <div class="news-box-text">gergegergerge</div>
+                </div>
+                <div class="news-boxes">
+                    <img class="news-box-img" src="img/Anime-Glasses-Flash-meme-1.jpg" alt="">
+                    <div class="news-box-text">gergegergerge</div>
+                </div>
+                <div class="news-boxes">
+                    <img class="news-box-img" src="img/Anime-Glasses-Flash-meme-1.jpg" alt="">
+                    <div class="news-box-text">gergegergerge</div>
+                </div>
+                <div class="news-boxes">
+                    <img class="news-box-img" src="img/Anime-Glasses-Flash-meme-1.jpg" alt="">
+                    <div class="news-box-text">gergegergerge</div>
+                </div>
+                <div class="news-boxes">
+                    <img class="news-box-img" src="img/Anime-Glasses-Flash-meme-1.jpg" alt="">
+                    <div class="news-box-text">gergegergerge</div>
                 </div>
             </div>
             
         </div>
-     </main>
+    </main>
 
-    <footer> </footer>
+    <footer id="footer">
+        <div id="footer-section">
+            <div id="footer-button-container">
+                <div id="logo-div"> <img class="footer-logo" src="img/gogo-logo.345096b3.png"></div>
+                <div id="buttons-div">
+                    <ul id="footer-list">
+                        <li class="footer-list-items">
+                            <img class="footer-img" src="img/footer-1.png" alt="">
+                            Бидний тухай
+                        </li>
+                        <li class="footer-list-items">
+                            <img class="footer-img" src="img/footer-2.png" alt="">
+                            Сурталчилгаа байршуулах
+                        </li>
+                        <li class="footer-list-items">
+                            <img class="footer-img" src="img/footer-3.png" alt="">
+                            Редакцийн ёс зүй
+                        </li>
+                        <li class="footer-list-items">
+                            <img class="footer-img" src="img/footer-4.png" alt="">
+                            Нууцлалын бодлого
+                        </li>
+                    </ul>
+                    <div class="footer-list-item-5">
+                        <img class="footer-img" src="img/footer5.png" alt="">
+                        Холбоо барих
+                    </div>
+                </div>
+            </div>
+            <div id="footer-line"></div>
+            <div id="footer-end-container">
+                <div id="footer-end-text">© 2007 - 2024 Монгол Контент ХХК • Бүх эрх хуулиар хамгаалагдсан</div>
+                <div id="end-button-container">
+                    <button class="footer-buttons"> <img class="button-img" src="img/fb-logo.png" alt=""></button>
+                    <button class="footer-buttons"> <img class="button-img" src="img/twitter-logo.png" alt=""></button>
+                    <button class="footer-buttons"> <img class="button-img" src="img/youtube-logo.png" alt=""></button>
+                    <button class="footer-buttons"> <img class="button-img" src="img/instagramm-logo.png"
+                            alt=""></button>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
