--- a/gogo.html
+++ b/gogo.html
@@ -718,7 +718,10 @@
            
             <div id="right-news-container">
                 <div id="r-top-news-container">
-                    <div id=""></div>
+                    <div id="title-right-news">
+                        <img src="" alt="">
+                        Онцлох мэдээ
+                    </div>
                 </div>
                 <div id="r-bottom-news-container"></div>
             </div>
