--- a/gogo.html
+++ b/gogo.html
@@ -96,7 +96,11 @@
                 <div id="highlight-bottom">
                     <div id="bot-box1">
                         <div id="box1-div">
-                            <img class="box1-img" src="img/bot box 1.jpg">
+                            <div class="hover-bottom-hl">
+                                <img class="box1-img" src="img/bot box 1.jpg">
+                                <p class="hover-title">Унших</p>
+                                <div class="black-box-1"></div>
+                            </div>
                             <p class="box1-text">Minister tower: Төрийн соёрхолт Саранцацралт “Vip” үзэсгэлэн</p>
                             <div class="share-icon-container"><img class="box-share-icon" src="img/share-icon.png">2
                             </div>
@@ -104,7 +108,11 @@
                     </div>
                     <div id="bot-box2">
                         <div id="box2-div">
-                            <img class="box1-img" src="img/bot box 2.jpg">
+                            <div class="hover-bottom-hl">
+                                <img class="box1-img" src="img/bot box 2.jpg">
+                                <p class="hover-title">Унших</p>
+                                <div class="black-box-1"></div>
+                            </div>
                             <p class="box1-text">Minister tower: Төрийн соёрхолт Саранцацралт “Vip” үзэсгэлэн</p>
                             <div class="share-icon-container"> <img class="box-share-icon" src="img/share-icon.png">2
                             </div>
@@ -112,7 +120,12 @@
                     </div>
                     <div id="bot-box3">
                         <div id="box3-div">
-                            <img class="box1-img" src="img/bot box 3.jpg">
+                            <div class="hover-bottom-hl">
+                                <img class="box1-img" src="img/bot box 3.jpg">
+                                <p class="hover-title">Унших</p>
+                                <div class="black-box-1"></div>
+                            </div>
+                            
                             <p class="box1-text">Minister tower: Төрийн соёрхолт Саранцацралт “Vip” үзэсгэлэн</p>
                             <div class="share-icon-container"><img class="box-share-icon" src="img/share-icon.png">2
                             </div>
